Bug 1727830 - Avoid removing tmp attachments more than once. r=mkmelin

Turns out CloseWindow can be called multiple times, we should not removing tmp attachments more than once.

Differential Revision: https://phabricator.services.mozilla.com/D124597

--HG--
extra : amend_source : e2f5732e51a5df4cb9d5e9777a0b4d01987ec238