mailnews/compose/src/nsMsgCompose.cpp
@@ -1303,26 +1303,28 @@ NS_IMETHODIMP nsMsgCompose::CloseWindow(void) {
   NS_ENSURE_SUCCESS(rv, rv);
   mDocShell = nullptr;
 
-  // ensure that the destructor of nsMsgSend is invoked to remove
-  // temporary files.
-  mMsgSend = nullptr;
-
-  // Remove temporary attachment files, e.g. key.asc when attaching public key.
-  nsTArray<RefPtr<nsIMsgAttachment>> attachments;
-  m_compFields->GetAttachments(attachments);
-  for (nsIMsgAttachment* attachment : attachments) {
-    bool isTemporary;
-    attachment->GetTemporary(&isTemporary);
-    if (isTemporary) {
-      nsCString url;
-      attachment->GetUrl(url);
-      nsCOMPtr<nsIFile> urlFile;
-      rv = NS_GetFileFromURLSpec(url, getter_AddRefs(urlFile));
-      if (NS_SUCCEEDED(rv)) {
-        urlFile->Remove(false);
+  if (mMsgSend) {
+    // Remove temporary attachment files, e.g. key.asc when attaching public key.
+    nsTArray<RefPtr<nsIMsgAttachment>> attachments;
+    m_compFields->GetAttachments(attachments);
+    for (nsIMsgAttachment* attachment : attachments) {
+      bool isTemporary;
+      attachment->GetTemporary(&isTemporary);
+      if (isTemporary) {
+        nsCString url;
+        attachment->GetUrl(url);
+        nsCOMPtr<nsIFile> urlFile;
+        rv = NS_GetFileFromURLSpec(url, getter_AddRefs(urlFile));
+        if (NS_SUCCEEDED(rv)) {
+          urlFile->Remove(false);
+        }
       }
     }
   }
+
+  // ensure that the destructor of nsMsgSend is invoked to remove
+  // temporary files.
+  mMsgSend = nullptr;
 
   // We are going away for real, we need to do some clean up first
   if (m_baseWindow) {
